# resx

./: .env.sample  README.md  docker-compose.yml  pyproject.toml
compose/django/: Dockerfile  start
compose/nginx/: Dockerfile  nginx.conf
compose/telegram/: start
config/: settings.py  urls.py  utils.py
habits/: admin.py  apps.py  handlers.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options.py  0002_alter_habit_related_habit.py  0003_alter_habit_options.py  0004_alter_habit_options.py  0005_alter_habit_options.py  0006_alter_habit_options.py  0007_alter_habit_options.py  0008_habit_url_bot.py  0009_alter_habit_periodic_alter_habit_time_to_do.py  0010_alter_habit_is_nice_habit_alter_habit_periodic_and_more.py
habits/telegram_bot/: app.py  utils.py
habits/telegram_bot/common_commands/: bot_common_cmd.py
habits/telegram_bot/filters/: chat_types.py
habits/telegram_bot/handlers/: user_private.py
habits/telegram_bot/keyboards/: reply.py
habits/tests/: test_api_habit.py  test_handlers.py  test_periodict_task.py  test_services.py  test_telegram.py  test_validators.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone.py  0003_alter_user_phone.py  0004_user_tg_id.py  0005_alter_user_tg_id.py  0006_alter_user_tg_id.py  0007_alter_user_tg_id.py  0008_alter_user_phone_alter_user_tg_id.py
